--- a/Lab2/Instagram.html
+++ b/Lab2/Instagram.html
@@ -4,25 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Instagram</title>
 
     <style>
         body{
-            background: rgb(240,242,245);
+            background: white;
         }
-        .facebook{
-            width: 300px;
-            margin-left: 250px;
-            margin-top: 180px;
+        .instagram{
+            margin-left: 450px;
+            margin-top: 60px;
         }
-        .facebook p{
-            font-size: 24px;
-            line-height: 28px;
-            width:400px;
-            font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-            margin-left: 25px;
-            margin-top: -10px;
-        }
+
         input{
             font-family: sans-serif;
             font-size: 15px;
@@ -33,17 +25,17 @@
             padding: 10px 10px;
             border-radius: 5px;
             text-align: left;
-            width: 300px;
+            width: 230px;
             display: block;
         }
         .input-stuff{
             background: white;
             position: absolute;
-            padding: 20px 5px 20px 5px;
-            height: 270px;
-            width: 370px;
+            height: 370px;
+            width: 270px;
             margin: -5vh 850px;
             border-radius: 5px;
+            border: 1.5px solid rgb(200, 200, 200);
             box-shadow: 5px 5px 6px -7px;
         }
         button{
@@ -51,7 +43,7 @@
             background-color: rgb(24, 119, 242);
             color: white;
             margin: auto;
-            width: 326px;
+            width: 256px;
             display: block;
             padding: 10px 0px;
             border-radius: 5px;
@@ -135,16 +127,15 @@
 </head>
 <body>
     <div class="input-stuff">
-        <input placeholder="Электронный адрес или номер телефона" type="text"><br>
+        <input placeholder="Номер телефона, имя пользователя или..." type="text"><br>
         <input placeholder="Пароль" type="password"><br>
-        <button type="submit"> Вход</button><br>
+        <button type="submit"> Войти</button><br>
         <a href="?" id="forgot-pass">Забыли пароль?</a><br>
         <div class="line"></div><br>
         <button class="new-account-button">Создать новый аккаунт</button>
     </div>
-    <div class="facebook">
-        <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook-logo">
-        <p>Facebook помогает вам всегда оставаться на связи и общаться со своими знакомыми.</p>
+    <div class="instagram">
+        <img src="img/image_2022-02-11_21-10-35.png" alt="instagram-logo" width="330">
     </div>
     <div class="bottom-link">
         <h3><a href="?">Создать Страницу</a> знаменитости, музыкальной группы или компании.</h3>
